style: fix gap

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -91,6 +91,10 @@
     justify-content: space-evenly;
     gap: 4rem;
   }
+  .hero ul {
+    display: flex;
+    gap: 0.75rem;
+  }
   .heroText {
     width: 19rem;
   }
@@ -135,7 +139,7 @@
     font-size: 2rem;
   }
   .hero ul {
-    display: flex;
+    gap: 1.5rem;
   }
   .heroImage {
     min-width: 350px;
